Rename these so that we can have similar views for cycles

--- a/lib/underwork_web/live/session_live/plan_session.html.heex
+++ b/lib/underwork_web/live/session_live/plan_session.html.heex
@@ -5,7 +5,7 @@
 
   <.simple_form
     for={@form}
-    id="planning-form"
+    id="session-planning-form"
     phx-change="validate"
     phx-submit="save"
     >
