Move cycle plan live view to a component and display in the main view

--- a/lib/underwork_web/live/cycles_live.html.heex
+++ b/lib/underwork_web/live/cycles_live.html.heex
@@ -3,3 +3,11 @@
     id={@session.id}
     session={@session}
   />
+
+  <%= for {_stream_id, cycle} <- @streams.cycles do %>
+    <.live_component
+      module={UnderworkWeb.PlanCycleComponent}
+      id={cycle.id}
+      cycle={cycle}
+    />
+  <% end %>
