Move cycle review live view to a component and display in the main view

--- a/lib/underwork_web/live/cycles_live.html.heex
+++ b/lib/underwork_web/live/cycles_live.html.heex
@@ -10,4 +10,11 @@
       id={cycle.id}
       cycle={cycle}
     />
+    <%= if cycle.state in ["reviewing", "complete"] do %>
+      <.live_component
+        module={UnderworkWeb.ReviewCycleComponent}
+        id={cycle.id}
+        cycle={cycle}
+      />
+    <% end %>
   <% end %>
