Move work live view to a component and display in the main view

--- a/lib/underwork_web/live/cycles_live.html.heex
+++ b/lib/underwork_web/live/cycles_live.html.heex
@@ -10,6 +10,15 @@
       id={cycle.id}
       cycle={cycle}
     />
+
+    <%= if cycle.state == "working" do %>
+      <.live_component
+        module={UnderworkWeb.WorkComponent}
+        id={cycle.id}
+        cycle={cycle}
+      />
+    <% end %>
+
     <%= if cycle.state in ["reviewing", "complete"] do %>
       <.live_component
         module={UnderworkWeb.ReviewCycleComponent}
