Move session review live view to compoenent

--- a/lib/underwork_web/live/cycles_live.html.heex
+++ b/lib/underwork_web/live/cycles_live.html.heex
@@ -27,3 +27,11 @@
       />
     <% end %>
   <% end %>
+
+<%= if @session.state == "reviewing" do %>
+  <.live_component
+    module={UnderworkWeb.ReviewSessionComponent}
+    id={@session.id}
+    session={@session}
+  />
+<% end %>
