--- a/lib/underwork_web/live/review_session_component.html.heex
+++ b/lib/underwork_web/live/review_session_component.html.heex
@@ -6,6 +6,7 @@
   <.simple_form
     for={@form}
     id="session-review-form"
+    phx-target={@myself}
     phx-change="validate"
     phx-submit="save"
     >
