Provide remaining time message that updates every second

--- a/lib/underwork_web/live/work_component.html.heex
+++ b/lib/underwork_web/live/work_component.html.heex
@@ -3,6 +3,8 @@
     Working...
   </.header>
 
+  <h2><%= remaining_time_message(@cycle, @current_time) %></h2>
+
   <.simple_form
     for={@form}
     id="work-form"
