Small refactor so we're not constantly querying.
NOTE: the cycle start at/end at will never change in the scope of the work component

--- a/lib/underwork_web/live/work_component.html.heex
+++ b/lib/underwork_web/live/work_component.html.heex
@@ -3,7 +3,7 @@
     Working...
   </.header>
 
-  <h2><%= remaining_time_message(@cycle, @current_time) %></h2>
+  <h2><%= remaining_time_message(@start_at, @end_at, @current_time) %></h2>
 
   <.simple_form
     for={@form}
