--- a/lib/underwork_web/live/plan_cycle_component.html.heex
+++ b/lib/underwork_web/live/plan_cycle_component.html.heex
@@ -15,9 +15,9 @@
     phx-change="validate"
     phx-submit="save"
     >
-    <.input field={@form[:accomplish]} type="text" label="What am I trying to accomplish this cycle?" />
-    <.input field={@form[:started]} type="text" label="How will I get started?" />
-    <.input field={@form[:hazards]} type="text" label="Any hazards? How will I counter them?" />
+    <.input field={@form[:accomplish]} type="textarea" label="What am I trying to accomplish this cycle?" />
+    <.input field={@form[:started]} type="textarea" label="How will I get started?" />
+    <.input field={@form[:hazards]} type="textarea" label="Any hazards? How will I counter them?" />
     <.input field={@form[:energy]} type="text" label="Energy" />
     <.input field={@form[:morale]} type="text" label="Morale" />
     <:actions>
