--- a/lib/underwork_web/live/review_session_component.html.heex
+++ b/lib/underwork_web/live/review_session_component.html.heex
@@ -10,11 +10,11 @@
     phx-change="validate"
     phx-submit="save"
     >
-    <.input field={@form[:done]} type="text" label="What did I get done this session?" />
-    <.input field={@form[:compare]} type="text" label="How did this compare to my normal work output?" />
-    <.input field={@form[:bogged]} type="text" label="Did I get bogged down? Where?" />
-    <.input field={@form[:replicate]} type="text" label="What went well? How can I replicate this in the future?" />
-    <.input field={@form[:takeaways]} type="text" label="Any other takeaways? Lessons to share with others?" />
+    <.input field={@form[:done]} type="textarea" label="What did I get done this session?" />
+    <.input field={@form[:compare]} type="textarea" label="How did this compare to my normal work output?" />
+    <.input field={@form[:bogged]} type="textarea" label="Did I get bogged down? Where?" />
+    <.input field={@form[:replicate]} type="textarea" label="What went well? How can I replicate this in the future?" />
+    <.input field={@form[:takeaways]} type="textarea" label="Any other takeaways? Lessons to share with others?" />
     <:actions>
       <.button phx-disable-with="Saving...">Done</.button>
     </:actions>
