--- a/lib/underwork_web/live/review_session_component.html.heex
+++ b/lib/underwork_web/live/review_session_component.html.heex
@@ -10,6 +10,7 @@
     phx-change="validate"
     phx-submit="save"
     >
+    <.input field={@form[:target]} type="text" label="Did you complete your session's targets?" />
     <.input field={@form[:done]} type="textarea" label="What did I get done this session?" />
     <.input field={@form[:compare]} type="textarea" label="How did this compare to my normal work output?" />
     <.input field={@form[:bogged]} type="textarea" label="Did I get bogged down? Where?" />
