--- a/lib/underwork_web/live/plan_cycle_component.html.heex
+++ b/lib/underwork_web/live/plan_cycle_component.html.heex
@@ -18,7 +18,20 @@
     <.input field={@form[:accomplish]} type="textarea" label="What am I trying to accomplish this cycle?" />
     <.input field={@form[:started]} type="textarea" label="How will I get started?" />
     <.input field={@form[:hazards]} type="textarea" label="Any hazards? How will I counter them?" />
-    <.input field={@form[:energy]} type="text" label="Energy" />
+
+    <.button type="button"
+      phx-click="set_energy" phx-value-energy={3} phx-target={@myself}
+      class={if Phoenix.HTML.Form.input_value(@form, :energy) == 3, do: "bg-zinc-500", else: "bg-zinc-200"}
+      phx-prevent-default>High</.button>
+    <.button type="button"
+      phx-click="set_energy" phx-value-energy={2} phx-target={@myself}
+      class={if Phoenix.HTML.Form.input_value(@form, :energy) == 2, do: "bg-zinc-500", else: "bg-zinc-200"}
+      phx-prevent-default>Med</.button>
+    <.button type="button"
+      phx-click="set_energy" phx-value-energy={1} phx-target={@myself}
+      class={if Phoenix.HTML.Form.input_value(@form, :energy) == 1, do: "bg-zinc-500", else: "bg-zinc-200"}
+      phx-prevent-default>Low</.button>
+
     <.input field={@form[:morale]} type="text" label="Morale" />
     <:actions>
       <.button phx-disable-with="Saving...">Start</.button>
