--- a/lib/underwork_web/live/review_session_component.html.heex
+++ b/lib/underwork_web/live/review_session_component.html.heex
@@ -10,7 +10,12 @@
     phx-change="validate"
     phx-submit="save"
     >
-    <.input field={@form[:target]} type="text" label="Did you complete your session's targets?" />
+    <div>
+      Did you complete your session's targets?
+      <.target_button label="Yes" value={3} form={@form} phx-target={@myself} />
+      <.target_button label="Half" value={2} form={@form} phx-target={@myself} />
+      <.target_button label="No" value={1} form={@form} phx-target={@myself} />
+    </div>
     <.input field={@form[:done]} type="textarea" label="What did I get done this session?" />
     <.input field={@form[:compare]} type="textarea" label="How did this compare to my normal work output?" />
     <.input field={@form[:bogged]} type="textarea" label="Did I get bogged down? Where?" />
